fix scrollbar for chrome 121

--- a/frontend/less/espo/custom.less
+++ b/frontend/less/espo/custom.less
@@ -3388,10 +3388,7 @@ a.close:hover {
     opacity: 0.8;
 }
 
-.dashlet > .dashlet-body,
-.list-kanban-container {
-    scrollbar-width: thin;
-}
+
 
 .wysiwyg-iframe-container.fallback {
     border-radius: var(--border-radius);
@@ -3399,9 +3396,16 @@ a.close:hover {
     background-color: var(--white-color);
 }
 
-* {
-    scrollbar-width: auto;
-    scrollbar-color: var(--scroll-thumb-bg) var(--scroll-bg);
+@supports not selector(::-webkit-scrollbar) {
+    .dashlet > .dashlet-body,
+    .list-kanban-container {
+        scrollbar-width: thin;
+    }
+
+    * {
+        scrollbar-width: auto;
+        scrollbar-color: var(--scroll-thumb-bg) var(--scroll-bg);
+    }
 }
 
 *::-webkit-scrollbar {
